bk_ida/gccida/g1/do_compare_rtx_and_jump
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_compare_rtx_and_jump/src/expr.c:10429:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_compare_rtx_and_jump/src/expr.c:10431:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_compare_rtx_and_jump/src/expr.c:10438:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v10; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_compare_rtx_and_jump/src/expr.c:10448:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( !if_true_label && ( mode_class_0[mode] & 0xFFFFFFFB) != 2 && mode_class_0[mode] != MODE_VECTOR_FLOAT ) 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_compare_rtx_and_jump/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_compare_rtx_and_jump/src/expr.c:10448:67: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( !if_true_label && ( mode_class_0[mode] & 0xFFFFFFFB) != 2 && mode_class_0[mode] != MODE_VECTOR_FLOAT ) 
                                                                  ^~~~~~~~~~~~
                                                                  mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_compare_rtx_and_jump/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/do_compare_rtx_and_jump/src/obj/expr.o] Error 1
